--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
 	<h1> Git c'est top !</h1>
+	<ol>
+		<li>Sauvegarde en local</li>
+		<li>Sauvegarde distante</li>
+	</ol>
+	<h2>Pull/Fetch avant de publier du code !!!</h2>
 
 </body>
 </html>
